--- a/templates/service_request.html
+++ b/templates/service_request.html
@@ -54,4 +54,4 @@
             <button type="submit" class="btn btn-primary">Submit Request</button>
         </form>        
     </div>
-
+{% endblock %}
