changing template file

--- a/templates/new_service.html
+++ b/templates/new_service.html
@@ -27,4 +27,4 @@
             <button type="submit" class="btn btn-primary">Create Service</button>
         </form>
     </div>
-#endblock
+{% endblock %}
