changing template file

--- a/templates/service_history.html
+++ b/templates/service_history.html
@@ -56,3 +56,4 @@
                 <a href="{{ url_for('close_service', service_id=service.id) }}" class="btn btn-danger">Close Service</a>
             </div>
         {% endif %}
+{% endblock %}
